# super-cosimo-bros

./: .gitignore  CMakeLists.txt  README.md  coppadaqui.cpp  exec_build.sh  reportlatex.aux  reportlatex.fdb_latexmk  reportlatex.fls  reportlatex.tex
report/: reportlatex.tex
src/: main.cpp
src/asciiart/: asciitext.hpp  texts.cpp  texts.hpp
src/asciiart/texts/: game_over.txt  shop.txt  splash.txt
src/coin/: coin.cpp  coin.hpp
src/enemy/: enemy.cpp  enemy.hpp
src/entity/: entity.hpp
src/gamemanager/: gamemanager.cpp  gamemanager.hpp
src/gamerenderer/: gamerenderer.cpp  gamerenderer.hpp
src/gametimer/: gametimer.cpp  gametimer.hpp
src/gun/: gun.cpp  gun.hpp
src/heart/: heart.cpp  heart.hpp
src/hitbox/: hitbox.cpp  hitbox.hpp
src/inputmanager/: inputmanager.cpp  inputmanager.hpp
src/level/: level.cpp  level.hpp
src/levelmanager/: levelmanager.cpp  levelmanager.hpp
src/list/: list.cpp  list.hpp  list2d.cpp  list2d.hpp
src/maps/: maps.cpp  maps.hpp
src/mushroom/: mushroom.cpp  mushroom.hpp
src/platform/: platform.cpp  platform.hpp
src/player/: player.cpp  player.hpp
src/powerup/: powerup.cpp  powerup.hpp
src/projectile/: projectile.cpp  projectile.hpp
src/rigidentity/: rigidentity.cpp  rigidentity.hpp
src/room/: room.cpp  room.hpp
src/roomstate/: roomstate.cpp  roomstate.hpp
src/shared/: functions.cpp  functions.hpp  position.hpp  settings.hpp
src/shop/: shop.cpp  shop.hpp
src/star/: star.cpp  star.hpp
src/staticbox/: staticbox.cpp  staticbox.hpp
src/staticentity/: staticentity.cpp  staticentity.hpp
(+24 files in other folders)
